a1/brendan_gordon/TEST_PROGRAMS/invalidtype/Fan_Jin/redeclaration.min
# This program is invalid as x is redeclared

var x: int;
var y: int;
var x: float;

